kbd-chooser (1.16) UNRELEASED; urgency=low

  * 

 -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 23:23:35 +0200

kbd-chooser (1.15) unstable; urgency=low

  * Colin Watson
    - Give debian/kbd-chooser.templates the same mtime as
      debian/kbd-chooser.templates-in, so that po2debconf doesn't decide
      that it needs to run debconf-updatepo on every binary package build.
    - Improve copyright file a little, thanks to lintian.
    - Squash various signedness warnings from gcc-4.0.
  * Frans Pop
    - Fix segfault if localechooser is not present by setting default
      for debian-installer/language. (Closes: #314721)
    - While we're at it, improve check for debian-installer/locale.
  * Updated translations: 
    - Vietnamese (vi.po) added by Clytie Siddall

 -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 14:25:00 +0200

kbd-chooser (1.14) unstable; urgency=low

  * Colin Watson
    - Rename mydebconf_get() to mydebconf_client(), which is less
      gratuitously confusing.
  * Joey Hess
    - Fix path to archdetect.
  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team

 -- Joey Hess <joeyh@debian.org>  Mon, 23 May 2005 10:27:23 -0400

kbd-chooser (1.13) unstable; urgency=low

  * Joey Hess
    - Call archdetect command instead of using debconf template.
  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Kostas Papadimas
    - Basque (eu.po) by Piarres Beobide
    - Hebrew (he.po) by Lior Kaplan
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes

 -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2005 13:37:18 -0400

kbd-chooser (1.12) unstable; urgency=medium

  * Colin Watson
    - Use AT keymaps on amd64 systems with USB keyboards, as was already
      done on i386.
    - Fix broken keymap detection on most architectures due to changed
      semantics of grep().
    - Call apt-install from postinst rather than prebaseconfig; the latter