@@ -1,6 +1,7 @@
 kbd-chooser (1.16) UNRELEASED; urgency=low
 
-  * 
+  * Matt Kraai
+    - Do not include <linux/keyboard.h>. (Closes: #317861)
 
  -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 23:23:35 +0200
 
